Submit button added

--- a/prac1.html
+++ b/prac1.html
@@ -10,5 +10,6 @@
         <input type = "checkbox" name="age" id="age">
         <label for id="age"> I am 18+</label>
     </form>
+    <button>submit</button>
 </body>
 </html>
