--- a/prac1.html
+++ b/prac1.html
@@ -9,7 +9,18 @@
     <form action="/server">
         <input type = "checkbox" name="age" id="age">
         <label for id="age"> I am 18+</label>
+
+        <div>
+            <input type = "radio" name="fruit" id="apple" value="apple">
+            <label for="apple">apple</label>
+            <input type = "radio" name="fruit" id="mango" value="mango">
+            <label for="mango">mango</label>
+            <input type = "radio" name="fruit" id="banana" value="banana">
+            <label for="banana">banana</label>
+            <input type = "radio" name="fruit" id="orange" value="orange">
+            <label for="orange">orange</label>
+        </div>
+        <button>submit</button>
     </form>
-    <button>submit</button>
 </body>
 </html>
