--- a/prac1.html
+++ b/prac1.html
@@ -20,6 +20,15 @@
             <input type = "radio" name="fruit" id="orange" value="orange">
             <label for="orange">orange</label>
         </div>
+
+        <div>
+            Choose your profession
+            <select name="profession" id="profession">
+                <option>Select your option</option>
+                <option value="student" selected>Student</option>
+                <option value="developer">Developer</option>
+            </select>
+        </div>
         <button>submit</button>
     </form>
 </body>
