--- a/prac1.html
+++ b/prac1.html
@@ -29,6 +29,11 @@
                 <option value="developer">Developer</option>
             </select>
         </div>
+
+        <div>
+            <label for="vol">Select your volume level:</label>
+            <input type="range" id="vol" min="0" max="100" name="vol" step="10" value="70"/>
+        </div>
         <button>submit</button>
     </form>
 </body>
