--- a/prac1.html
+++ b/prac1.html
@@ -34,6 +34,10 @@
             <label for="vol">Select your volume level:</label>
             <input type="range" id="vol" min="0" max="100" name="vol" step="10" value="70"/>
         </div>
+
+        <br>
+        <label for="feedback">Please provide your valuable feedback</label>
+        <textarea id="feedback" name="feedback" rows="5" cols="100" placeholder="Write your feedback here"></textarea>
         <button>submit</button>
     </form>
 </body>
