--- a/prac3.html
+++ b/prac3.html
@@ -39,6 +39,38 @@
     </tr>
     </table>
 <br/><br/>
+<form>
+    <label for="name">Name:</label>
+    <input type="text" name="name">
+    <br/> <br/>
 
+    <label for="sex">Sex:</label>
+    <input type="radio" name="sex" id="sex" value="Male"/>
+    <label for="Male">Male</label>
+    <input type="radio" name="sex" id="sex" value="Female"/>
+    <label for="Female">Female</label>
+<br/><br/>
+
+        <label for="Country">Country</label>
+        <select name="country" id="country">
+        <option>Select your option</option>
+        <option value="india">India</option>
+        <option value="nepal">Nepal</option>
+        <option value="usa">USA</option>
+        <option value="canada">Canada</option>
+    </select>
+<br/><br/>
+
+    <label for="Message">Message:</label>
+    <textarea id="Message"></textarea>
+    <br/><br/>
+
+    <input type="checkbox" name="subs" id="subs"/>
+    <label for="subs">Subscribe?</label>
+    <br/><br/>
+    
+    <button>Submit</button>
+
+</form>
 </body>
 </html>
