--- a/prac3.html
+++ b/prac3.html
@@ -72,5 +72,35 @@
     <button>Submit</button>
 
 </form>
+
+<form action="/contact">
+<h1><b>Feedback Form</b></h1>
+<label for="name">Name:</label>
+<input type="text" placeholder="Write your name" id="name"> 
+<br/> <br/>
+
+<label for="email">Email:</label>
+<input type="text" placeholder="Write your email" id="email"> 
+<br/><br/>
+
+<label for="Message">Message:</label>
+<textarea id="Message"></textarea>
+<br/><br/>
+
+<label for="Rate">Rate us out of 5 </label>
+<input type="radio" name="numbers" id="numbers" value="numbers">
+<label for="1">1</label><br/>
+<input type="radio" name="numbers" id="numbers" value="numbers">
+<label for="2">2</label><br/>
+<input type="radio" name="numbers" id="numbers" value="numbers">
+<label for="3">3</label><br/>
+<input type="radio" name="numbers" id="numbers" value="numbers">
+<label for="4">4</label><br/>
+<input type="radio" name="numbers" id="numbers" value="numbers">
+<label for="5">5</label><br/>
+<br/>
+
+<button>Send your message!</button>
+</form>
 </body>
 </html>
